--- a/Lab-4/app/src/main/AndroidManifest.xml
+++ b/Lab-4/app/src/main/AndroidManifest.xml
@@ -8,13 +8,30 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".StaticBroadcastActivity"
+            android:theme="@style/AppThemeNoActionBar" />
+
+        <activity
+            android:name=".DynamicBroadcastActivity"
+            android:theme="@style/AppThemeNoActionBar" />
+
+        <receiver android:name=".StaticReceiver">
+            <intent-filter>
+                <action android:name="com.example.terrychan.receive" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
