--- a/Lab-4-5/app/src/main/AndroidManifest.xml
+++ b/Lab-4-5/app/src/main/AndroidManifest.xml
@@ -8,22 +8,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".MainActivity"
             android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".StaticBroadcastActivity"
+            android:launchMode="singleInstance"
             android:theme="@style/AppThemeNoActionBar" />
 
         <activity
             android:name=".DynamicBroadcastActivity"
+            android:launchMode="singleInstance"
             android:theme="@style/AppThemeNoActionBar" />
 
         <receiver android:name=".StaticReceiver">
@@ -31,7 +32,15 @@
                 <action android:name="com.example.terrychan.STATIC" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".Widget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
 
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info" />
+        </receiver>
     </application>
 
 </manifest>
